style: prevent layout shift when switching between log lines (#182)

--- a/src/renderer/styles/details.less
+++ b/src/renderer/styles/details.less
@@ -6,6 +6,7 @@
   overflow: auto;
   flex-grow: 1;
   flex-shrink: 1;
+  scrollbar-gutter: stable;
 
   .ConvertedTable {
     margin: 0.5rem 1.5rem 1rem;
